# retrio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  log.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci-debug.yml  ci.yml  docs-and-examples.yml  publish-testpypi.yml
docs/: architecture.md  benchmarks.md  best_practices.md  examples.md  index.md  migration.md  observability.md  usage.md
examples/: README.md  async_example.py  datadog_example.py  sync_example.py
src/retrio/: __init__.py  _circuit_breaker.py  _datadog.py  _metrics.py  _observability.py  _policies.py  _rate_limit.py  _retry.py  _tracing.py
tests/: test_circuit_breaker.py  test_datadog.py  test_integration.py  test_metrics.py  test_policies.py  test_rate_limit.py  test_retry.py  test_stop_conditions.py  test_tracing.py
