[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrio"
version = "0.1.0"
description = "Simple retry, backoff, and observability helpers for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Retrio Contributors"}
]
keywords = ["retry", "backoff", "resilience", "observability", "async"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
otel = ["opentelemetry-api>=1.20.0"]
prometheus = ["prometheus-client>=0.16.0"]

[project.urls]
Homepage = "https://github.com/your-org/retrio"
Repository = "https://github.com/your-org/retrio"
Issues = "https://github.com/your-org/retrio/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
