[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retrio"
version = "1.0.0"
description = "Simple retry, backoff, and observability helpers for Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Retrio Contributors"}
]
keywords = ["retry", "backoff", "resilience", "observability", "async"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
otel = ["opentelemetry-api>=1.20.0"]
prometheus = ["prometheus-client>=0.16.0"]

[project.urls]
Homepage = "https://github.com/RamanaMenda/retrio"
Repository = "https://github.com/RamanaMenda/retrio"
Issues = "https://github.com/RamanaMenda/retrio/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
